Fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@
 }
 
 *::-webkit-scrollbar-track {
-    background: #333333;
+    background: #0C0C0C;
     border-radius: 5px;
 }
 
